--- a/src/humanize/locale/pl_PL/LC_MESSAGES/humanize.po
+++ b/src/humanize/locale/pl_PL/LC_MESSAGES/humanize.po
@@ -200,8 +200,8 @@ msgstr[2] "kwintyliardów"
 msgid "googol"
 msgid_plural "googol"
 msgstr[0] "googol"
-msgstr[1] "googoly"
-msgstr[2] "googolów"
+msgstr[1] "googole"
+msgstr[2] "googoli"
 
 #: src/humanize/number.py:246
 msgid "zero"
@@ -352,8 +352,8 @@ msgstr[2] "1 rok, %d miesięcy"
 msgid "%d year"
 msgid_plural "%d years"
 msgstr[0] "%d rok"
-msgstr[1] "%d lat"
-msgstr[2] "%d lata"
+msgstr[1] "%d lata"
+msgstr[2] "%d lat"
 
 #: src/humanize/time.py:217
 #, python-format
