--- a/src/humanize/locale/bn_BD/LC_MESSAGES/humanize.po
+++ b/src/humanize/locale/bn_BD/LC_MESSAGES/humanize.po
@@ -20,102 +20,102 @@ msgstr ""
 #: src/humanize/number.py:84
 msgctxt "0 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:85
 msgctxt "1 (male)"
 msgid "st"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:86
 msgctxt "2 (male)"
 msgid "nd"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:87
 msgctxt "3 (male)"
 msgid "rd"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:88
 msgctxt "4 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:89
 msgctxt "5 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:90
 msgctxt "6 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:91
 msgctxt "7 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:92
 msgctxt "8 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:93
 msgctxt "9 (male)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:97
 msgctxt "0 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:98
 msgctxt "1 (female)"
 msgid "st"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:99
 msgctxt "2 (female)"
 msgid "nd"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:100
 msgctxt "3 (female)"
 msgid "rd"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:101
 msgctxt "4 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:102
 msgctxt "5 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:103
 msgctxt "6 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:104
 msgctxt "7 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:105
 msgctxt "8 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:106
 msgctxt "9 (female)"
 msgid "th"
-msgstr ""
+msgstr "তম"
 
 #: src/humanize/number.py:178
 msgid "thousand"
