--- a/src/humanize/locale/ar/LC_MESSAGES/humanize.po
+++ b/src/humanize/locale/ar/LC_MESSAGES/humanize.po
@@ -1,7 +1,8 @@
 # Arabic (عربي) translations for humanize package.
 # Copyright (C) 2022.
 # This file is distributed under the same license as the humanize package.
-# AYMEN Mohammed <let.me.code.safe@gmail.com>, 2022. | Second contributor: YazeedT, 2023.
+# AYMEN Mohammed <let.me.code.safe@gmail.com>, 2022.
+# YazeedT, 2023.
 #
 msgid ""
 msgstr ""
