--- a/src/humanize/locale/zh_CN/LC_MESSAGES/humanize.po
+++ b/src/humanize/locale/zh_CN/LC_MESSAGES/humanize.po
@@ -311,8 +311,8 @@ msgstr "1年"
 #, python-format
 msgid "1 year, %d day"
 msgid_plural "1 year, %d days"
-msgstr[0] "%d年"
-msgstr[1] "%d年"
+msgstr[0] "1年又%d天"
+msgstr[1] "1年又%d天"
 
 #: src/humanize/time.py:210
 msgid "1 year, 1 month"
