--- a/src/humanize/locale/zh_HK/LC_MESSAGES/humanize.po
+++ b/src/humanize/locale/zh_HK/LC_MESSAGES/humanize.po
@@ -312,8 +312,8 @@ msgstr "1 年"
 #, python-format
 msgid "1 year, %d day"
 msgid_plural "1 year, %d days"
-msgstr[0] "%d 年"
-msgstr[1] "%d 年"
+msgstr[0] "1 年又 %d 天"
+msgstr[1] "1 年又 %d 天"
 
 #: src/humanize/time.py:210
 msgid "1 year, 1 month"
